Initial commit of website files

--- a/image_slider.html
+++ b/image_slider.html
@@ -27,11 +27,9 @@
             <a href="IsinduWickramasekara-NDG Linux Unhatc-certificate_2.png" data-lightbox="cert" data-title="CISCO NDG Linux unhatc Certificate">
                 <img src="IsinduWickramasekara-NDG Linux Unhatc-certificate_2.png">
             </a>
-
-
-
         </div>
         <script src="lightbox-plus-jquery.js"></script>
+    </div>
 </body>
 
 </html>
